--- a/src/core/python/CMakeLists.txt
+++ b/src/core/python/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CORE_PY_V_SRC
   ${CMAKE_CURRENT_SOURCE_DIR}/bsphere_v.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/distr_1d_v.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/distr_2d_v.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/distr_1d_cond_v.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/frame_v.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/math_v.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/object_v.cpp
